--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script type="module" src="./dist/app.js"></script>
-    <link rel="stylesheet" href="./dist/assets/bundle-61900aca.css">
+    <link rel="stylesheet" href="./dist/bundle.css">
     <link rel="stylesheet" href="./static/global.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;600&family=Open+Sans:wght@300;400;600&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
